2003-12-03  Marcus Bjurman  <marbj499@student.liu.se>

	* src/gnome-cmd-con-smb.c (smb_open):
	Avoid segfault when a NULL uri is returned from create_uri.

2003-12-03  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-12-02  Marcus Bjurman  <marbj499@student.liu.se>

	* src/gnome-cmd-file-selector.c (gnome_cmd_file_selector_reload): 
	* src/gnome-cmd-xfer.c (update_xfer_gui_func): 
	* src/gnome-cmd-dir.c: 
	* src/gnome-cmd-dir.h:
	Fixed some issues with file-lists not updating.

	* src/gnome-cmd-dir.c (gnome_cmd_dir_new_with_con):
	Plain wrong object_destroy removed.
	
	* gnome-commander.spec.in:
	Changed the desktop dir to match the new one.

	* po/POTFILES.in:
	* gnome-commander.desktop:
	* gnome-commander.desktop.in:
	* Makefile.am:
	Made the desktop file translatable through the .po files.
	This fixes #128251.

2003-12-01  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.in: Added Portuguese (pt) to ALL_LINGUAS.

2003-11-27  Marcus Bjurman  <marbj499@student.liu.se>

	* src/utils.c: 
	* src/utils.h: 
	Added hack to fix uris created from uri-strings.

	* src/gnome-cmd-file-selector.c (gnome_cmd_file_selector_update_style):
	The ext-column is now hidden when the extension is only showed together
	with the filename.

2003-11-25  Marcus Bjurman  <marbj499@student.liu.se>

	* src/gnome-cmd-file.c (gnome_cmd_file_rename): 
	* src/gnome-cmd-dir.h: 
	* src/gnome-cmd-dir.c:
	Renaming a directory and then entering it immediately now works.
	

##############################################################################
#                                   1.1.4                                    #
##############################################################################
2003-11-24  Marcus Bjurman  <marbj499@student.liu.se>
	
	* libgcmd/Makefile.am:
	* libgcmd/gnome-cmd-dialog.c:
	* libgcmd/gnome-cmd-dialog.h:
	* libgcmd/gnome-cmd-file-info.c:
	* libgcmd/gnome-cmd-file-info.h:
	* libgcmd/gnome-cmd-plugin.c: